[workspace]
members = ["xtask"]

[package]
name = "jcbhmr-rfc9651"
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
chumsky = { version = "0.12.0", default-features = false, features = [
    "stacker",
] }
derive_more = { version = "2.1.1", features = ["full"] }
thiserror = { version = "2.0.18", default-features = false }

[features]
default = ["std"]
std = ["chumsky/std", "thiserror/std"]
serde = ["chumsky/serde"]

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
